Optimize GC and streamline app args